--- a/grontown/package.json
+++ b/grontown/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/serialize": "^1.3.0",
+    "@emotion/styled": "^11.13.0",
+    "@emotion/use-insertion-effect-with-fallbacks": "^1.1.0",
+    "@emotion/utils": "^1.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
