--- a/eastworld/pyproject.toml
+++ b/eastworld/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "python-jose>=3.3.0",
     "fastapi-limiter>=0.1.5",
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.12"
 license = {text = "Apache2.0"}
 
 [tool.pytest.ini_options]
